Challenge_Website/resources/css/product.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
  }

html {
    font-size: 16px;
  }

body {
    font-family: 'Helvetica', sans-serif;
    margin-top: 5rem;
    width: 100%;
    text-align: center;
  }

a {
  text-decoration: none;
  color: black;
}

h2 {
    text-transform: uppercase;
  }

li {
    list-style-type: none;
  }

/* Header Product Page */

header {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    width: 100%;
    height: 5rem;
    background-color: white;
    /* border: 1px red solid; */
  }

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

.logo {
  display: block;
  font-family: 'Michroma', sans-serif;
}

header .logo h1 {
  font-weight: 800;
  font-size: 2rem;
  margin-left: 3rem;
}

.navbar {
  display: flex;
  justify-content: flex-end;
}

.desktop {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  height: 5rem;
  text-transform: uppercase;
  font-weight: 600;
  /* border: 1px red solid; */
}

.icons {
  display: flex;
  align-items: center;
  height: 5rem;
  /* border: 1px red solid; */
  
}

.navigation ul {
  display: flex;
  justify-content: flex-end;
  /* border: 1px red solid; */
}


.navigation a {
  /* border: 1px green solid; */
  margin: 2rem;
  color: black;
}

.navigation img {
    height: 1rem;
  }

.navigation .burger {
    display: none;
}

@media only screen and (max-width: 760px) {
   
    .navigation .burger {
      display: flex;
    }

    .navigation a {
      margin: 0.5rem;
    }

    .icons li {
      display: flex;
    }

    
}

/* Product Page Serum */

.section {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: auto;
  grid-template-areas:
    "title title photo photo"
    "buttons . photo photo"
    "text text photo photo"
    "text text photo photo";

  align-items: center;
  width: 60%;
  margin: 0 auto;
  text-align: left;
}

.product .title {
  grid-area: title;
  margin-top: 2rem;
  margin-bottom: 2rem;
}

.product .title p {
  padding: 1rem 0;
}

.product .images {
  grid-area: photo;
}

.product img {
  max-width: 100%;
  padding: 0.5rem;
}

.buttons {
  grid-area: buttons;
}

.quantity {
  display: flex;
}

.quantity a {
  display: block;
  color: white;
  background-color: rgb(160, 160, 160);
  /* background-color: rgb(196, 182, 151); */
  font-size: 1rem;
  padding: 0.5rem 1rem;
}
.quantity a:hover {
  background-color: rgb(193, 193, 193);
}

#quantity {
  background-color: rgb(235, 235, 235);
  color: black;
}

.button a {
  display: block;
  width: 12rem;
  /* background-color: black; */
  color: white;
  padding: 0.5rem;
  font-size: 1rem;
  margin: 0.5rem 0;
}

.shop a {
  background-color: black;
}

.shop a:before {
  content: "🛒";
  margin: 1rem;
}

.shop a:hover {
  background-color: rgb(101, 101, 101);
}

.wishlist a {
  /* background-color: grey; */
  background-color: rgb(165, 151, 121);
}

.wishlist a:before {
  content: "❤";
  margin: 1rem;
}

.wishlist a:hover {
  background-color: rgb(140, 117, 70);
}

.product .text {
  grid-area: text;
  padding-right: 5rem;
}

.product li {
  list-style-type: square;
  margin-left: 1rem;
}

.product h3 {
  margin-top: 1rem;
  padding: 0.5rem 0;
  font-size: 1rem;
}

.product p, .product li {
  line-height: 1.5;
  color: grey;
  font-size: 1rem;
}

/* Company Values */

.values {
  display: flex;
  width: 100%;
  background-color: rgb(243, 244, 244);
  justify-content: center;
  padding: 1rem;
  margin-top: 3rem;
}

.value {
  padding: 2rem 2rem;
}

.value h3 {
  padding-top: 1rem;
}

.value img {
  height: 3rem;
}

/* Footer Product Page*/

footer {
    display: flex;
    background-color: rgb(196, 182, 151);
    width: 100%;
    height: auto;
    justify-content: space-between;
    padding: 1rem 3rem;
  }
  
  footer ul {
    text-align: left;
  }
  
  footer li {
    color: white;
    padding: 0.5rem;
  }
  
  footer .left {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    align-items: center;
    width: auto;
  }
  
  footer .logo h1 {
    color: white;
    font-size: 1.5rem;
    font-weight: 400;
    /* border: 1px red solid; */
  }
  
  footer .social {
    display: flex;
    color: white;
  }
  
  .social i {
    padding: 0.5rem;
    font-size: 1.5rem;
    color: white;
  }

